cabal-version: 2.4

name: draw-graph
version: 0.1.0.0
license: ISC
author: Ignat Insarov
maintainer: kindaro@gmail.com

common commons
    build-depends: base ^>=4.12.0.0
                 , diagrams
                 , diagrams-lib
                 , diagrams-svg
                 , fgl
                 , random
                 , linear
                 , comonad
                 , mtl
                 , Stream
                 , split
    default-language: Haskell2010
    default-extensions: NoMonomorphismRestriction
                      , FlexibleContexts
                      , TypeFamilies
                      , TypeApplications
                      , PatternSynonyms
                      , ViewPatterns
                      , ApplicativeDo
                      , ConstraintKinds
                      , TupleSections
                      , BlockArguments
                      , ExistentialQuantification
    ghc-options: -fdefer-typed-holes -Wall

library
    import: commons
    exposed-modules: Analyze
                   , Draw
                   , Layout
                   , Instances
    hs-source-dirs: src

executable draw-graph
    import: commons
    build-depends: draw-graph
    main-is: Main.hs

test-suite Vcat
    import: commons
    hs-source-dirs: test
    type: exitcode-stdio-1.0
    main-is: Vcat.hs
    build-depends: draw-graph
test-suite Hcat
    import: commons
    hs-source-dirs: test
    type: exitcode-stdio-1.0
    main-is: Hcat.hs
    build-depends: draw-graph
test-suite Tile
    import: commons
    hs-source-dirs: test
    type: exitcode-stdio-1.0
    main-is: Tile.hs
    build-depends: draw-graph
