cabal-version: 2.4

name: draw-graph
version: 0.1.0.0
license: ISC
author: Ignat Insarov
maintainer: kindaro@gmail.com

common commons
    build-depends: base ^>=4.12.0.0
                 , diagrams
                 , diagrams-lib
                 , diagrams-svg
                 , fgl
                 , random
                 , linear
                 , comonad
                 , mtl
                 , Stream
                 , split
                 , protolude
    default-language: Haskell2010
    default-extensions: NoMonomorphismRestriction
                      , FlexibleInstances
                      , FlexibleContexts
                      , TypeFamilies
                      , TypeApplications
                      , PatternSynonyms
                      , ViewPatterns
                      , ApplicativeDo
                      , ConstraintKinds
                      , TupleSections
                      , BlockArguments
                      , ExistentialQuantification
                      , NoImplicitPrelude
                      , OverloadedStrings
                      , RecordWildCards
                      , PartialTypeSignatures
                      , ScopedTypeVariables
                      , QuantifiedConstraints
    ghc-options: -fdefer-typed-holes -Wall

library
    import: commons
    exposed-modules: Analyze
                   , Draw
                   , Layout
                   , Instances
                   , Examples
                   , Converge
    hs-source-dirs: src

executable draw-graph
    import: commons
    build-depends: draw-graph
    main-is: Main.hs
