cabal-version: 2.4

name: draw-graph
version: 0.1.0.0
license: ISC
author: Ignat Insarov
maintainer: kindaro@gmail.com

common commons
    build-depends: base
                 , diagrams
                 , diagrams-lib
                 , diagrams-svg
                 , fgl
                 , random
                 , linear
                 , comonad
                 , mtl
                 , Stream
                 , split
                 , protolude
                 , text
                 , bytestring
                 , JuicyPixels
                 , cute-interpolation
                 , diagrams-rasterific
                 , containers
                 , base-unicode-symbols
                 , multiset
    default-language: Haskell2010
    default-extensions: NoMonomorphismRestriction
                      , FlexibleInstances
                      , FlexibleContexts
                      , TypeFamilies
                      , TypeApplications
                      , PatternSynonyms
                      , ViewPatterns
                      , ApplicativeDo
                      , ConstraintKinds
                      , TupleSections
                      , BlockArguments
                      , ExistentialQuantification
                      , NoImplicitPrelude
                      , OverloadedStrings
                      , RecordWildCards
                      , PartialTypeSignatures
                      , ScopedTypeVariables
                      , QuantifiedConstraints
                      , UnicodeSyntax
    ghc-options: -fdefer-typed-holes -Wall

library
    import: commons
    exposed-modules: Analyze
                   , Draw
                   , Draw.Examples
                   , Layout
                   , Instances
                   , Examples
                   , Converge
    hs-source-dirs: src

executable draw-graph
    import: commons
    build-depends: draw-graph
    main-is: Main.hs

test-suite properties
    import: commons
    type: exitcode-stdio-1.0
    build-depends: draw-graph
                 , tasty
                 , tasty-quickcheck
                 , test-invariant
                 , fgl-arbitrary
    hs-source-dirs: checks/properties
    main-is: Main.hs

test-suite pictures
    import: commons
    type: exitcode-stdio-1.0
    build-depends: draw-graph
                 , tasty
                 , tasty-golden
    hs-source-dirs: checks/pictures
    main-is: Main.hs
